--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,8 +3,14 @@ name: Docker Build and Push
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'Dockerfile'
+      - '**/docker/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'Dockerfile'
+      - '**/docker/**'
 
 jobs:
   build-and-push:
