--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,4 +33,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/new_auto_push:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/new_auto_push:v2
